// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Button renders Button link unchanged 1`] = `
<div>
  <a
    class="sc-1137dc9b-1 jjLmfz undefined "
  >
    <span>
      button test
    </span>
  </a>
</div>
`;

exports[`Button renders form Button unchanged 1`] = `
<div>
  <button
    class="sc-1137dc9b-2 cblRpI undefined "
  >
    <span>
      button test
    </span>
  </button>
</div>
`;
